--- a/ZhangTu/build.gradle
+++ b/ZhangTu/build.gradle
@@ -32,4 +32,15 @@ dependencies {
     compile files('libs/tbs_sdk_v2.0.0.1102_36202_withoutGame_obfs_20160524_095935.jar')
     compile files('libs/AMap2DMap_2.9.2_AMapSearch_3.6.0_AMapLocation_3.1.0_20161114.jar')
     compile project(':magicindicator')
+    compile files('libs/ShareSDK-QZone-2.7.10.jar')
+    compile files('libs/ShareSDK-Wechat-Core-2.7.10.jar')
+    compile files('libs/ShareSDK-Wechat-Favorite-2.7.10.jar')
+    compile files('libs/ShareSDK-SinaWeibo-2.7.10.jar')
+    compile files('libs/ShareSDK-Wechat-2.7.10.jar')
+    compile files('libs/ShareSDK-Wechat-Moments-2.7.10.jar')
+    compile files('libs/ShareSDK-TencentWeibo-2.7.10.jar')
+    compile files('libs/ShareSDK-QQ-2.7.10.jar')
+    compile files('libs/MobCommons-2016.1107.1809.jar')
+    compile files('libs/ShareSDK-Core-2.7.10.jar')
+    compile files('libs/MobTools-2016.1107.1809.jar')
 }
