--- a/ZhangTu/build.gradle
+++ b/ZhangTu/build.gradle
@@ -8,9 +8,14 @@ android {
     defaultConfig {
         applicationId "com.example.mrwuchao.newone"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+    }
+    repositories{
+        flatDir{
+            dirs 'libs' //就是你放aar的目录地址
+        }
     }
     buildTypes {
         release {
@@ -43,4 +48,5 @@ dependencies {
     compile files('libs/MobCommons-2016.1107.1809.jar')
     compile files('libs/ShareSDK-Core-2.7.10.jar')
     compile files('libs/MobTools-2016.1107.1809.jar')
+    compile name:'SMSSDK-2.1.2',ext:'aar'
 }
