--- a/ZhangTu/src/main/AndroidManifest.xml
+++ b/ZhangTu/src/main/AndroidManifest.xml
@@ -29,6 +29,17 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
+    <!--用于进行网络定位-->
+    <!--用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!--用于获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <!--用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <!--用于访问网络，网络定位需要上网-->
+    <!--用于读取手机当前的状态-->
+    <!--用于写入缓存数据到扩展存储卡-->
+    <!--用于申请调用A-GPS模块-->
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -90,6 +101,11 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
         <activity android:name=".activity.LoginActivity">
         </activity>
+        <activity android:name=".activity.RegistActivity">
+        </activity>
+        <activity android:name=".activity.SetActivity">
+        </activity>
+        <service android:name="com.amap.api.location.APSService"/>
     </application>
 
 </manifest>
